add wireframe example

--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="A page dedicated to the Philippians 4:11-13 scripture">
+    <meta name="author" content="Pedro Castro">
     <title>Philippians 4:11-13</title>
     <link rel="stylesheet" href="styles/box-model.css">
   </head>
