--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="author" content="Pedro Castro">
     <title>Pedro Martins Silva de Castro | WDD 130</title>
+    <meta name="description" content="This webpage is the homepage of my assignments in the WDD 130 (Web Fundamentals) class at BYU Idaho">
+    <meta name="author" content="Pedro Castro">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -23,6 +24,11 @@
             In essence, I'm someone who's deeply invested in my personal and professional growth, cherishing the connections I make along the way. Whether it's through developing innovative software solutions or building lifelong relationships, I'm always looking forward to the next challenge and opportunity. 
         </p>
     </main>
+    <aside>
+      <h2>Brazil</h2>
+      <img src="images/flag-of-brazil.png" alt="The flag of Brazil">
+      <p>Brazil stands as the largest nation in South America and the broader Latin American area, renowned for its dynamic culture, extensive Amazon rainforest, and notable metropolises such as Rio de Janeiro. This city is well-known for its scenic beaches like Copacabana and Ipanema, the towering Christ the Redeemer statue on Corcovado, and the exuberant Carnival celebration with its vivid parade floats, elaborate costumes, and lively samba performances. The country's biodiversity is extraordinary, encompassing a rich variety of plants and animals within its jungles, plains, and swamps. With a versatile economy rooted in agriculture, mining, manufacturing, and service industries, Brazil demonstrates its growing influence worldwide. As a Portuguese-speaking country, Brazil's cultural heritage is a blend of indigenous and colonial legacies, forming a distinctive and varied identity that shines through its gastronomy, music, and dance traditions.</p>
+    </aside>
     <footer>
         <p>&copy;2024 | Pedro Castro | São Paulo, Brazil</p>
     </footer>
