--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Pedro Martins Silva de Castro | WDD 130</title>
-    <meta name="description" content="This webpage is the homepage of my assignments in the WDD 130 (Web Fundamentals) class at BYU Idaho">
+    <meta name="description" content="This webpage is the homepage for Pedro Castro's assignments in the WDD 130 (Web Fundamentals) class at BYU Idaho">
     <meta name="author" content="Pedro Castro">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
