--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Rafting Site Plan | Pedro Martins Silva de Castro</title>
-        <meta name="description" content="This rafting site plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
+        <meta name="description" content="This rafting site plan outlines the purpose, target audience, branding information, and style guide for Pedro Castro's WDD 130 course website project at BYU-Idaho.">
         <meta name="author" content="Pedro Castro">
         <link rel="stylesheet" href="styles/site-plan-rafting.css">
     </head>
