--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        <a href="https://www.linkedin.com/in/pedro-castro-dev/">My LinkedIn Profile</a>
+        <a href="https://www.facebook.com/profile.php?id=100006257138770">My Facebook Profile</a>
     </nav>
     </header>
     <main>
@@ -23,8 +25,13 @@
             But beyond my academic and personal interests, there's something even more exciting on the horizon. This August, I'm getting married to my incredible girlfriend of four years. It's a significant milestone that symbolizes not just our love but also the start of a new chapter in our lives. I'm eager to embark on this journey, bringing the same passion and commitment that I apply to my studies and hobbies.  
             In essence, I'm someone who's deeply invested in my personal and professional growth, cherishing the connections I make along the way. Whether it's through developing innovative software solutions or building lifelong relationships, I'm always looking forward to the next challenge and opportunity. 
         </p>
+        <ul class="box">
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/washington-d.c.-temple" target="_blank">Washington D.C. Temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple" target="_blank">São Paulo Brazil Temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
       <h2>Brazil</h2>
       <img src="images/flag-of-brazil.png" alt="The flag of Brazil">
       <p>Brazil stands as the largest nation in South America and the broader Latin American area, renowned for its dynamic culture, extensive Amazon rainforest, and notable metropolises such as Rio de Janeiro. This city is well-known for its scenic beaches like Copacabana and Ipanema, the towering Christ the Redeemer statue on Corcovado, and the exuberant Carnival celebration with its vivid parade floats, elaborate costumes, and lively samba performances. The country's biodiversity is extraordinary, encompassing a rich variety of plants and animals within its jungles, plains, and swamps. With a versatile economy rooted in agriculture, mining, manufacturing, and service industries, Brazil demonstrates its growing influence worldwide. As a Portuguese-speaking country, Brazil's cultural heritage is a blend of indigenous and colonial legacies, forming a distinctive and varied identity that shines through its gastronomy, music, and dance traditions.</p>
@@ -33,4 +40,5 @@
         <p>&copy;2024 | Pedro Castro | São Paulo, Brazil</p>
     </footer>
   </body>
+  <!--Last modification: 03/12/2024-->
 </html>
