change title for about section

--- a/week03/wwr/about.html
+++ b/week03/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About White Water Rafting</title>
+        <title>About - White Water Rafting</title>
         <meta name="description" content="This is the rafting site's &quot;about&quot; section for Pedro Castro's WDD 130 course website project at BYU-Idaho.">
         <meta name="author" content="Pedro Castro">
         <link rel="stylesheet" href="styles/rafting.css">
