add responsiveness to rafting about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="images/logo.webp" alt="Rafting Site Logo" id="logo"></a>
+            <a href="index.html" id="logolink"><img src="images/logo.webp" alt="Rafting Site Logo" id="logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
@@ -27,23 +27,41 @@
                     <p>Our mission is to deliver unforgettable, exhilarating, and secure whitewater rafting adventures from every level to enthusiasts. Positioned amidst the stunning landscapes offered by some of the most scenic rivers, we aim to forge a connection between individuals and the natural world through the exciting activity of rafting. We provide a range of guided excursions tailored to suit both novices and seasoned rafters alike, ensuring that every participant departs with lasting memories and an enhanced appreciation of nature's beauty. Our dedication to ensuring the safety of our guests, preserving the environment, and delivering outstanding customer care is paramount, with the goal of igniting a lifelong love for adventure in all who join us on the river.</p>
                 </article>
             </div>
-            <section>
+            <section id="history">
                 <h2>History</h2>
-                <p>Founded in 2002 by a collective of avid rafters and nature enthusiasts, White Water Rafting set out to transform their passion for the great outdoors into a thriving adventure service. Situated amidst the splendor of the world's most picturesque river landscapes, their mission was clear: to offer exhilarating whitewater rafting experiences that connect people with the natural world. Over the decades, the company has perfected its offerings, creating a range of rafting trips designed to cater to adventurers of all skill levels, from beginners eager to dip their toes into the rapids to seasoned thrill-seekers craving their next adrenaline rush.
-                <br><br>With a steadfast commitment to environmental conservation and safety, White Water Rafting has not only provided thrilling adventures but also emphasized the importance of preserving our natural surroundings. Their dedication has attracted a wide-ranging clientele, from young adults seeking to disconnect from technology and reconnect with nature, to older adventurers looking to reignite their adventurous spirit.</p>
+                <p>Founded in 2002 by a collective of avid rafters and nature enthusiasts, White Water Rafting set out to transform their passion for the great outdoors into a thriving adventure service. Situated amidst the splendor of the world's most picturesque river landscapes, their mission was clear: to offer exhilarating whitewater rafting experiences that connect people with the natural world.</p>
+                <img src="images/logo.webp" alt="Rafting Site Logo" id="history-img">
+                <p>With a steadfast commitment to environmental conservation and safety, White Water Rafting has not only provided thrilling adventures but also emphasized the importance of preserving our natural surroundings. Their dedication has attracted a wide-ranging clientele, from young adults seeking to disconnect from technology and reconnect with nature, to older adventurers looking to reignite their adventurous spirit.</p>
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/anne-nygard-OoDbvGEv0uc-unsplash.jpg" alt="A group of people wearing helmets and life jackets are enthusiastically white water rafting down a river, paddling through splashing waves.">
-                <img src="images/logan-easterling-465UQnjdcsc-unsplash.jpg" alt="Rafters in blue and white gear navigate choppy river waters, splashes surrounding them.">
-                <img src="images/patrik-velich-zJP4ne153_A-unsplash.jpg" alt="Focused rafters in red life vests and white helmets paddle vigorously through turbulent whitewater, with rocky shores in the background.">
-                <img src="images/narinder-pal-b9xWxpbe9vw-unsplash.jpg" alt="Four orange rafts with passengers in life jackets float on a calm green river in front of a hillside dotted with buildings and trees.">
-                <img src="images/riley-shannon-dc9aabiDtg-unsplash.jpg" alt="A person in a blue raft navigates white water rapids in a forested area, with rocky banks in the background.">
+                <div id="adventures">
+                    <figure>
+                        <img src="images/anne-nygard-OoDbvGEv0uc-unsplash.jpg" alt="A group of people wearing helmets and life jackets are enthusiastically white water rafting down a river, paddling through splashing waves.">
+                        <figcaption>Thundering Torrent</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/logan-easterling-465UQnjdcsc-unsplash.jpg" alt="Rafters in blue and white gear navigate choppy river waters, splashes surrounding them.">
+                        <figcaption>Rapid Rush</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/patrik-velich-zJP4ne153_A-unsplash.jpg" alt="Focused rafters in red life vests and white helmets paddle vigorously through turbulent whitewater, with rocky shores in the background.">
+                        <figcaption>Whirlwind Rapids</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/riley-shannon-dc9aabiDtg-unsplash.jpg" alt="A person in a blue raft navigates white water rapids in a forested area, with rocky banks in the background.">
+                        <figcaption>Roaring Cascade</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/narinder-pal-b9xWxpbe9vw-unsplash.jpg" alt="Four orange rafts with passengers in life jackets float on a calm green river in front of a hillside dotted with buildings and trees.">
+                        <figcaption>Cascade Chaos</figcaption>
+                    </figure>
+                </div>
             </section>
         </main>
         <footer>
             <p>&copy;2024 | White Water Rafting | Pedro Castro </p>
-            <nav class="sociallinks">
+            <nav class="social-links">
                 <a href="https://www.facebook.com/profile.php?id=100006257138770">
                     <img src="images/facebook-icon.svg" alt="Facebook icon">
                 </a>
